<resources>
    <string name="app_name">BookDonation</string>
    <string name="email">Email:</string>

    <string name="password">Password:</string>

    <string name="login">Login</string>

    <string name="welcome_to_admin_login">Welcome to Admin Login</string>

    <string name="manage_event">Manage Books</string>

    <string name="add_new">Add New</string>

    <string name="view_all">View All</string>

    <string name="event_name_here">Books Name Here</string>

    <string name="log_out">Log Out</string>

    <string name="add">Add</string>

    <string name="phone">Phone</string>

    <string name="Semesters">Smester</string>

    <string name="hh_mm_ss">hh:mm:ss</string>

    <string name="time">Time</string>

    <string name="yyyy_mm_dd">yyyy-mm-dd</string>

    <string name="date">Date</string>

    <string name="name">Book Name</string>



    <string name="action_settings">Settings</string>


    -<string-array name="Semesters">

    <item>Semester 1</item>

    <item>Semester 2</item>

    <item>Semester 3</item>

    <item>Semester 4</item>

    <item>Semester 5</item>

    <item>Semester 6</item>

    <item>Semester 7</item>

    <item>Semester 8</item>

    <item>Other</item>

</string-array>
</resources>
