<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.popie.uoleventsdiary_admin.ManageEventsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/manage_event" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:text="@string/add_new" />

    <Button
        android:id="@+id/buttonView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnUpdate"
        android:layout_centerVertical="true"
        android:text="@string/view_all" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonView"
        android:layout_below="@+id/btnUpdate"
        android:layout_marginTop="12dp"
        android:text="@string/log_out" />

</RelativeLayout>
