<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zeeshan.bookdonation.LoginActivity">


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="41dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewName"
        android:layout_centerVertical="true"
        android:text="@string/password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewName"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/textViewPassword"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="70dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignStart="@+id/editTextName"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_to_admin_login" />
</RelativeLayout>
