<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zeeshan.bookdonation.Activities.AddNewActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="203dp"
        android:layout_height="177dp"
        android:layout_above="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" android:contentDescription="TODO" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnUpdate"
        android:layout_alignStart="@+id/btnUpdate"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="03-- ---------"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPhone"
        android:layout_alignBottom="@+id/etPhone"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etPhone"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_above="@+id/etPhone"
        android:layout_alignStart="@+id/etMail"
        android:layout_marginEnd="48dp"
        android:ems="9"
        android:hint="SMESTER"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/etPhone"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etMail"
        android:layout_alignBottom="@+id/etMail"

        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/etMail"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etName"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="890dp"
        android:layout_toEndOf="@+id/spinner"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etMail"
        android:layout_alignEnd="@+id/etPhone"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Book name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Semesters"



        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>

